--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -117,10 +117,17 @@
         <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
         <activity android:name="rn.ReactPageActivity" />
         <activity
-            android:name="rn.BaseRnActivity"
+            android:name="rn.RnListActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:windowSoftInputMode="adjustResize"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+       />
+
+
+        <activity
+            android:name="rn.RnViewActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:windowSoftInputMode="adjustResize"
+       />
     </application>
 
 </manifest>
