--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -90,9 +90,9 @@ dependencies {
     implementation 'com.tencent.bugly:nativecrashreport:latest.release'
     //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
     implementation 'com.tencent.bugly:crashreport_upgrade:latest.release'
-//    rn
+    //TODO ReactNative  依赖
     implementation "com.facebook.react:react-native:+" // From node_modules
-    implementation 'com.android.support:multidex:1.0.3'
+    //implementation 'com.android.support:multidex:1.0.3'
 
 
 }
