--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "react": "16.6.3",
-    "react-native": "0.57.8"
+    "@babel/runtime": "^7.3.1",
+    "react": "16.5.0",
+    "react-native": "0.57.1"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
@@ -17,8 +17,5 @@
     "react-test-renderer": "16.6.3",
     "react-navigation": "^2.18.2",
     "react-native-tab-navigator": "^0.3.4"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
